--- a/index.html
+++ b/index.html
@@ -6,52 +6,54 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-    <div class="matrix">
+    <header class="matrix">
       <img class="matrix-img" src="./eisenhower-matrix.jpg">
       <a class="matrix-inf-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="todo-list">
-      <p id="todo-list-add">
+    </header>
+    <main>
+      <h1 class="visually-hidden">Todo list app</h1>
+      <section class="todo-list">
+        <h2 class="visually-hidden">Todo list</h2>
         <label class="new-task-lable" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input class="input" id="new-task" class="task" type="text">
           <button class="button">Add</button>
         </div>
-      </p>
-      <h3 class="title">Todo</h3>
-      <ul class="list" id="incomplete-tasks">
-        <li class="list-item">
-          <input class="complete-task-input" type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input class="input" type="text" class="task">
-          <button class="button edit">Edit</button>
-          <button class="button delete">
-            <img class="remove-img" src="./remove.svg">
-          </button>
-        </li>
-        <li class="list-item edit-mode">
-          <input class="complete-task-input" type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input class="input" type="text" value="Go Shopping" class="task">
-          <button class="button edit">Save</button>
-          <button class="button delete">
-            <img class="remove-img" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3 class="title">Completed</h3>
-      <ul class="list" id="completed-tasks">
-        <li class="list-item">
-          <input class="complete-task-input" type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input class="input" type="text" class="task">
-          <button class="button edit">Edit</button>
-          <button class="button delete">
-            <img class="remove-img" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-    </div>
+        <h3 class="title">Todo</h3>
+        <ul class="list" id="incomplete-tasks">
+          <li class="list-item">
+            <input class="complete-task-input" type="checkbox">
+            <label class="task">Pay Bills</label>
+            <input class="input" type="text" class="task">
+            <button class="button edit">Edit</button>
+            <button class="button delete">
+              <img class="remove-img" src="./remove.svg">
+            </button>
+          </li>
+          <li class="list-item edit-mode">
+            <input class="complete-task-input" type="checkbox">
+            <label class="task">Go Shopping</label>
+            <input class="input" type="text" value="Go Shopping" class="task">
+            <button class="button edit">Save</button>
+            <button class="button delete">
+              <img class="remove-img" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+        <h3 class="title">Completed</h3>
+        <ul class="list" id="completed-tasks">
+          <li class="list-item">
+            <input class="complete-task-input" type="checkbox" checked>
+            <label class="task">See the Doctor</label>
+            <input class="input" type="text" class="task">
+            <button class="button edit">Edit</button>
+            <button class="button delete">
+              <img class="remove-img" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
