--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
     <header class="matrix">
-      <img class="matrix-img" src="./eisenhower-matrix.jpg">
+      <img class="matrix-img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
       <a class="matrix-inf-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main>
@@ -27,7 +27,7 @@
             <input class="input" type="text" class="task">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="remove-img" src="./remove.svg">
+              <img class="remove-img" src="./remove.svg" alt="remove button">
             </button>
           </li>
           <li class="list-item edit-mode">
@@ -36,7 +36,7 @@
             <input class="input" type="text" value="Go Shopping" class="task">
             <button class="button edit">Save</button>
             <button class="button delete">
-              <img class="remove-img" src="./remove.svg">
+              <img class="remove-img" src="./remove.svg" alt="remove button">
             </button>
           </li>
         </ul>
@@ -48,7 +48,7 @@
             <input class="input" type="text" class="task">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="remove-img" src="./remove.svg">
+              <img class="remove-img" src="./remove.svg" alt="remove button">
             </button>
           </li>
         </ul>
