--- a/index.html
+++ b/index.html
@@ -6,49 +6,49 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-    <header class="matrix">
-      <img class="matrix-img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
-      <a class="matrix-inf-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <header class="header">
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main>
-      <h1 class="visually-hidden">Todo list app</h1>
+      <h1 class="main-title visually-hidden">Todo list app</h1>
       <section class="todo-list">
-        <h2 class="visually-hidden">Todo list</h2>
-        <label class="new-task-lable" for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input class="input" id="new-task" class="task" type="text">
-          <button class="button">Add</button>
+        <h2 class="todo-list__title visually-hidden">Todo list</h2>
+        <label class="todo-list__label todo-list__label--task-add" for="new-task">Add Item</label>
+        <div class="todo-list__task-wrapper">
+          <input class="todo-list__add-input" id="new-task" type="text">
+          <button class="todo-list__add-button">Add</button>
         </div>
-        <h3 class="title">Todo</h3>
-        <ul class="list" id="incomplete-tasks">
-          <li class="list-item">
-            <input class="complete-task-input" type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input class="input" type="text" class="task">
-            <button class="button edit">Edit</button>
-            <button class="button delete">
-              <img class="remove-img" src="./remove.svg" alt="remove button">
+        <h3 class="todo-list__title">Todo</h3>
+        <ul class="tasks" id="incomplete-tasks">
+          <li class="tasks-item">
+            <input class="tasks-item__complete-input" type="checkbox">
+            <label class="tasks-item__label">Pay Bills</label>
+            <input class="tasks-item__edit-input" type="text">
+            <button class="tasks-item__button edit">Edit</button>
+            <button class="tasks-item__button delete">
+              <img class="tasks-item__remove-img" src="./remove.svg" alt="remove button">
             </button>
           </li>
-          <li class="list-item edit-mode">
-            <input class="complete-task-input" type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input class="input" type="text" value="Go Shopping" class="task">
-            <button class="button edit">Save</button>
-            <button class="button delete">
-              <img class="remove-img" src="./remove.svg" alt="remove button">
+          <li class="tasks-item edit-mode">
+            <input class="tasks-item__complete-input" type="checkbox">
+            <label class="tasks-item__label">Go Shopping</label>
+            <input class="tasks-item__edit-input" type="text" value="Go Shopping">
+            <button class="tasks-item__button edit">Save</button>
+            <button class="tasks-item__button delete">
+              <img class="tasks-item__remove-img" src="./remove.svg" alt="remove button">
             </button>
           </li>
         </ul>
-        <h3 class="title">Completed</h3>
-        <ul class="list" id="completed-tasks">
-          <li class="list-item">
-            <input class="complete-task-input" type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input class="input" type="text" class="task">
-            <button class="button edit">Edit</button>
-            <button class="button delete">
-              <img class="remove-img" src="./remove.svg" alt="remove button">
+        <h3 class="todo-list__title">Completed</h3>
+        <ul class="tasks" id="completed-tasks">
+          <li class="tasks-item">
+            <input class="tasks-item__complete-input" type="checkbox" checked>
+            <label class="tasks-item__label">See the Doctor</label>
+            <input class="tasks-item__edit-input" type="text">
+            <button class="tasks-item__button edit">Edit</button>
+            <button class="tasks-item__button delete">
+              <img class="tasks-item__remove-img" src="./remove.svg" alt="remove button">
             </button>
           </li>
         </ul>
